# voicemail

./: .env.example  Cargo.toml  README.md
Docker/: Dockerfile_musl_arm64  build_musl_arm64.sh
assets/: voicemail.pcmu
assets/web/: index.html
assets/web/css/: hover.css
assets/web/js/: en-us.js  g711.js  ja-jp.js  player.js  utils.js
ext/ai-sdk-assemblyai/: Cargo.toml
ext/ai-sdk-assemblyai/src/transcription/: options.rs
src/: macros.rs  main.rs  play_file.rs
src/sip/: mod.rs  play_file.rs
src/sms/: mod.rs
src/speech_to_text/: assemblyai.rs  gcp.rs  mod.rs
src/utils/: mod.rs
src/web/: db.rs  mod.rs
