[package]
name = "voicemail"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = false
strip = "symbols"
lto = "fat"
codegen-units = 1

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
rsipstack = "0.2.51"
clap = { version = "4.5.46", features = ["derive"] }
rsip = { version = "0.4.0" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
chrono = "0.4.41"
get_if_addrs = "0.5.3"
rand = { version = "0.9.2" }
sdp-rs = "0.2.1"
dotenv = "0.15"
rtp-rs = "0.6.0"
regex = { version = "1.11" }
rusqlite = { version = "0.32", features = ["blob", "bundled"] }
anyhow = "1.0.99"
actix-web = "4"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { version = "1", features = ["derive"] }
mime = "0.3.17"
