[package]
name = "voicemail"
version = "0.1.3"
edition = "2024"

[profile.release]
debug = false
strip = "symbols"
lto = "fat"
codegen-units = 1

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
rsipstack = "0.2"
clap = { version = "4.5", features = ["derive"] }
rsip = { version = "0.4" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
chrono = "0.4"
get_if_addrs = "0.5"
rand = { version = "0.9.2" }
sdp-rs = "0.2.1"
dotenv = "0.15"
rtp-rs = "0.6.0"
regex = { version = "1.11" }
rusqlite = { version = "0.37", features = ["blob", "bundled"] }
anyhow = "1.0.99"
actix-web = "4"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
serde = { version = "1", features = ["derive"] }
mime = "0.3.17"
